feat: 使用工厂来进行事件的发布等处理